add basic demo